# myCSVVisor

./: LICENSE  README.md  myCSVVisor.py
myCSVVisor_cpp/: CMakeLists.txt  csvdata.h  csvloader.cpp  csvloader.h  main.cpp  mainwindow.cpp  mainwindow.h  placeholder3dwidget.cpp  placeholder3dwidget.h  qcustomplot.cpp  qcustomplot.h  reference_emitters.txt  simpleplotwidget.cpp  simpleplotwidget.h
